--- a/spec/fixtures/cassettes/unsplash_api.yml
+++ b/spec/fixtures/cassettes/unsplash_api.yml
@@ -568,4 +568,72 @@ http_interactions:
         Sidheek\",\"first_name\":\"Salman\",\"last_name\":\"Sidheek\",\"twitter_username\":null,\"portfolio_url\":null,\"bio\":\"A
         random guy from south part of india.\",\"location\":\"Kerala\",\"links\":{\"self\":\"https://api.unsplash.com/users/salman_sidheek\",\"html\":\"https://unsplash.com/@salman_sidheek\",\"photos\":\"https://api.unsplash.com/users/salman_sidheek/photos\",\"likes\":\"https://api.unsplash.com/users/salman_sidheek/likes\",\"portfolio\":\"https://api.unsplash.com/users/salman_sidheek/portfolio\",\"following\":\"https://api.unsplash.com/users/salman_sidheek/following\",\"followers\":\"https://api.unsplash.com/users/salman_sidheek/followers\"},\"profile_image\":{\"small\":\"https://images.unsplash.com/profile-1647945087542-a16264b9be3d?ixlib=rb-4.0.3\\u0026crop=faces\\u0026fit=crop\\u0026w=32\\u0026h=32\",\"medium\":\"https://images.unsplash.com/profile-1647945087542-a16264b9be3d?ixlib=rb-4.0.3\\u0026crop=faces\\u0026fit=crop\\u0026w=64\\u0026h=64\",\"large\":\"https://images.unsplash.com/profile-1647945087542-a16264b9be3d?ixlib=rb-4.0.3\\u0026crop=faces\\u0026fit=crop\\u0026w=128\\u0026h=128\"},\"instagram_username\":\"Salman_sidheek\",\"total_collections\":0,\"total_likes\":79,\"total_photos\":171,\"accepted_tos\":true,\"for_hire\":true,\"social\":{\"instagram_username\":\"Salman_sidheek\",\"portfolio_url\":null,\"twitter_username\":null,\"paypal_email\":null}}},\"preview_photos\":[{\"id\":\"KmlcqKGUdDo\",\"created_at\":\"2022-10-13T06:30:49Z\",\"updated_at\":\"2022-10-19T20:38:19Z\",\"blur_hash\":\"LtJHp{D*oLae_4Rjayay9aofaybH\",\"urls\":{\"raw\":\"https://images.unsplash.com/photo-1665642636027-1f9d585931bc?ixlib=rb-4.0.3\",\"full\":\"https://images.unsplash.com/photo-1665642636027-1f9d585931bc?ixlib=rb-4.0.3\\u0026q=80\\u0026cs=tinysrgb\\u0026fm=jpg\\u0026crop=entropy\",\"regular\":\"https://images.unsplash.com/photo-1665642636027-1f9d585931bc?ixlib=rb-4.0.3\\u0026w=1080\\u0026fit=max\\u0026q=80\\u0026fm=jpg\\u0026crop=entropy\\u0026cs=tinysrgb\",\"small\":\"https://images.unsplash.com/photo-1665642636027-1f9d585931bc?ixlib=rb-4.0.3\\u0026w=400\\u0026fit=max\\u0026q=80\\u0026fm=jpg\\u0026crop=entropy\\u0026cs=tinysrgb\",\"thumb\":\"https://images.unsplash.com/photo-1665642636027-1f9d585931bc?ixlib=rb-4.0.3\\u0026w=200\\u0026fit=max\\u0026q=80\\u0026fm=jpg\\u0026crop=entropy\\u0026cs=tinysrgb\",\"small_s3\":\"https://s3.us-west-2.amazonaws.com/images.unsplash.com/small/photo-1665642636027-1f9d585931bc\"}},{\"id\":\"PLp8VJv4qXY\",\"created_at\":\"2022-10-06T18:50:32Z\",\"updated_at\":\"2022-10-19T19:48:41Z\",\"blur_hash\":\"L35#eE-o9aNGNGM|RkWC0LM|s.of\",\"urls\":{\"raw\":\"https://images.unsplash.com/photo-1665081524049-e1a2a3b8df01?ixlib=rb-4.0.3\",\"full\":\"https://images.unsplash.com/photo-1665081524049-e1a2a3b8df01?ixlib=rb-4.0.3\\u0026q=80\\u0026cs=tinysrgb\\u0026fm=jpg\\u0026crop=entropy\",\"regular\":\"https://images.unsplash.com/photo-1665081524049-e1a2a3b8df01?ixlib=rb-4.0.3\\u0026w=1080\\u0026fit=max\\u0026q=80\\u0026fm=jpg\\u0026crop=entropy\\u0026cs=tinysrgb\",\"small\":\"https://images.unsplash.com/photo-1665081524049-e1a2a3b8df01?ixlib=rb-4.0.3\\u0026w=400\\u0026fit=max\\u0026q=80\\u0026fm=jpg\\u0026crop=entropy\\u0026cs=tinysrgb\",\"thumb\":\"https://images.unsplash.com/photo-1665081524049-e1a2a3b8df01?ixlib=rb-4.0.3\\u0026w=200\\u0026fit=max\\u0026q=80\\u0026fm=jpg\\u0026crop=entropy\\u0026cs=tinysrgb\",\"small_s3\":\"https://s3.us-west-2.amazonaws.com/images.unsplash.com/small/photo-1665081524049-e1a2a3b8df01\"}},{\"id\":\"3FWT0SH8pw4\",\"created_at\":\"2022-08-15T17:51:29Z\",\"updated_at\":\"2022-10-20T05:36:13Z\",\"blur_hash\":\"LaB5DAW@bdoJS,n}obWYDgRkWXj?\",\"urls\":{\"raw\":\"https://images.unsplash.com/photo-1660585438317-954504e64a29?ixlib=rb-4.0.3\",\"full\":\"https://images.unsplash.com/photo-1660585438317-954504e64a29?ixlib=rb-4.0.3\\u0026q=80\\u0026cs=tinysrgb\\u0026fm=jpg\\u0026crop=entropy\",\"regular\":\"https://images.unsplash.com/photo-1660585438317-954504e64a29?ixlib=rb-4.0.3\\u0026w=1080\\u0026fit=max\\u0026q=80\\u0026fm=jpg\\u0026crop=entropy\\u0026cs=tinysrgb\",\"small\":\"https://images.unsplash.com/photo-1660585438317-954504e64a29?ixlib=rb-4.0.3\\u0026w=400\\u0026fit=max\\u0026q=80\\u0026fm=jpg\\u0026crop=entropy\\u0026cs=tinysrgb\",\"thumb\":\"https://images.unsplash.com/photo-1660585438317-954504e64a29?ixlib=rb-4.0.3\\u0026w=200\\u0026fit=max\\u0026q=80\\u0026fm=jpg\\u0026crop=entropy\\u0026cs=tinysrgb\",\"small_s3\":\"https://s3.us-west-2.amazonaws.com/images.unsplash.com/small/photo-1660585438317-954504e64a29\"}},{\"id\":\"LjU4t0Asc8A\",\"created_at\":\"2021-05-05T16:33:06Z\",\"updated_at\":\"2022-10-20T08:36:51Z\",\"blur_hash\":\"LzEWduV[aya}*0aejsj[JCayoejs\",\"urls\":{\"raw\":\"https://images.unsplash.com/photo-1620232255917-9f6f61fb5de5?ixlib=rb-4.0.3\",\"full\":\"https://images.unsplash.com/photo-1620232255917-9f6f61fb5de5?ixlib=rb-4.0.3\\u0026q=80\\u0026cs=tinysrgb\\u0026fm=jpg\\u0026crop=entropy\",\"regular\":\"https://images.unsplash.com/photo-1620232255917-9f6f61fb5de5?ixlib=rb-4.0.3\\u0026w=1080\\u0026fit=max\\u0026q=80\\u0026fm=jpg\\u0026crop=entropy\\u0026cs=tinysrgb\",\"small\":\"https://images.unsplash.com/photo-1620232255917-9f6f61fb5de5?ixlib=rb-4.0.3\\u0026w=400\\u0026fit=max\\u0026q=80\\u0026fm=jpg\\u0026crop=entropy\\u0026cs=tinysrgb\",\"thumb\":\"https://images.unsplash.com/photo-1620232255917-9f6f61fb5de5?ixlib=rb-4.0.3\\u0026w=200\\u0026fit=max\\u0026q=80\\u0026fm=jpg\\u0026crop=entropy\\u0026cs=tinysrgb\",\"small_s3\":\"https://s3.us-west-2.amazonaws.com/images.unsplash.com/small/photo-1620232255917-9f6f61fb5de5\"}}]}"
   recorded_at: Thu, 20 Oct 2022 11:27:23 GMT
+- request:
+    method: get
+    uri: https://api.unsplash.com/photos/random/?orientation=landscape&topics=xjPR4hlkBGA
+    body:
+      encoding: UTF-8
+      string: ''
+    headers:
+      Accept:
+      - application/json
+      Authorization:
+      - 'Client-ID '
+      Connection:
+      - close
+      Host:
+      - api.unsplash.com
+      User-Agent:
+      - http.rb/5.1.0
+  response:
+    status:
+      code: 401
+      message: Unauthorized
+    headers:
+      Connection:
+      - close
+      Server:
+      - Cowboy
+      Content-Type:
+      - application/json
+      Access-Control-Allow-Origin:
+      - "*"
+      Access-Control-Request-Method:
+      - "*"
+      Access-Control-Allow-Headers:
+      - "*"
+      Access-Control-Expose-Headers:
+      - Link,X-Total,X-Per-Page,X-RateLimit-Limit,X-RateLimit-Remaining
+      Content-Language:
+      - en
+      Cache-Control:
+      - no-cache
+      X-Request-Id:
+      - a95c1608-82c7-457f-b751-279cf8540fc7
+      X-Runtime:
+      - '0.009413'
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubDomains
+      Via:
+      - 1.1 vegur, 1.1 varnish, 1.1 varnish
+      Accept-Ranges:
+      - bytes
+      Date:
+      - Thu, 27 Oct 2022 15:09:31 GMT
+      X-Served-By:
+      - cache-iad-kiad7000153-IAD, cache-tyo11933-TYO
+      X-Cache:
+      - MISS, MISS
+      X-Cache-Hits:
+      - 0, 0
+      X-Timer:
+      - S1666883371.354232,VS0,VE170
+      Vary:
+      - Accept-Encoding, Origin,Authorization,Accept-Language,Accept
+      Transfer-Encoding:
+      - chunked
+    body:
+      encoding: UTF-8
+      string: '{"errors":["OAuth error: The access token is invalid"]}'
+  recorded_at: Thu, 27 Oct 2022 15:09:31 GMT
 recorded_with: VCR 6.1.0
