--- a/spec/fixtures/unsplash_results.yml
+++ b/spec/fixtures/unsplash_results.yml
@@ -1,16 +1,17 @@
 ---
 view:
-  width: 4129
-  height: 2385
-  urls: https://images.unsplash.com/photo-1666475877076-85f1d002c34f?ixid=MnwzNzE2OTd8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjY4NjQxNTc&ixlib=rb-4.0.3
+  width: 5472
+  height: 3648
+  urls: https://images.unsplash.com/photo-1541972184324-d7e22e823db4?ixid=MnwzNzE2OTd8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjY5MTk5OTc&ixlib=rb-4.0.3
   creator:
-    :name: Seval Torun
-    :bio:
-    :photo: https://images.unsplash.com/profile-1661101844510-7a8c6d58affeimage?ixlib=rb-4.0.3&crop=faces&fit=crop&w=128&h=128
+    :name: Douglas Lopez
+    :bio: "Fotografo gastronômico, publicitário e de casamento. \r\nInstagram: @Dougglasfoto
+      | @DougglasLopez"
+    :photo: https://images.unsplash.com/profile-1581475662553-b88974c13858image?ixlib=rb-4.0.3&crop=faces&fit=crop&w=128&h=128
   topics:
     food-drink:
       status: approved
-      approved_on: '2022-10-26T14:23:57Z'
+      approved_on: '2020-04-06T14:20:20Z'
 topics:
   1:
     topic_id: xjPR4hlkBGA
