--- a/spec/fixtures/cassettes/unsplash_api.yml
+++ b/spec/fixtures/cassettes/unsplash_api.yml
@@ -636,4 +636,153 @@ http_interactions:
       encoding: UTF-8
       string: '{"errors":["OAuth error: The access token is invalid"]}'
   recorded_at: Thu, 27 Oct 2022 15:09:31 GMT
+- request:
+    method: get
+    uri: https://api.unsplash.com/photos/random/?orientation=landscape&topics=xjPR4hlkBGA
+    body:
+      encoding: UTF-8
+      string: ''
+    headers:
+      Accept:
+      - application/json
+      Authorization:
+      - Client-ID <UNSPLAH_TOKEN>
+      Connection:
+      - close
+      Host:
+      - api.unsplash.com
+      User-Agent:
+      - http.rb/5.1.0
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Connection:
+      - close
+      Server:
+      - Cowboy
+      Content-Type:
+      - application/json
+      Access-Control-Allow-Origin:
+      - "*"
+      Access-Control-Request-Method:
+      - "*"
+      Access-Control-Allow-Headers:
+      - "*"
+      Access-Control-Expose-Headers:
+      - Link,X-Total,X-Per-Page,X-RateLimit-Limit,X-RateLimit-Remaining
+      Cache-Control:
+      - private,max-age=0,stale-if-error=3600,stale-while-revalidate=0
+      X-Unsplash-Version:
+      - v1
+      Content-Language:
+      - en
+      Etag:
+      - W/"7d77ad46ebe87f5ef998ed790b19def5"
+      X-Ratelimit-Limit:
+      - '50'
+      X-Ratelimit-Remaining:
+      - '44'
+      X-Request-Id:
+      - 3ca418c8-e970-43b1-9d9c-3d895739d089
+      X-Runtime:
+      - '0.080908'
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubDomains
+      Via:
+      - 1.1 vegur, 1.1 varnish, 1.1 varnish
+      Accept-Ranges:
+      - bytes
+      Date:
+      - Fri, 28 Oct 2022 01:31:26 GMT
+      X-Served-By:
+      - cache-iad-kcgs7200031-IAD, cache-tyo11943-TYO
+      X-Cache:
+      - MISS, MISS
+      X-Cache-Hits:
+      - 0, 0
+      X-Timer:
+      - S1666920686.992630,VS0,VE256
+      Vary:
+      - Accept-Encoding, Origin,Authorization,Accept-Language,Accept
+      Transfer-Encoding:
+      - chunked
+    body:
+      encoding: UTF-8
+      string: '{"id":"PiwXpD3-Hbs","created_at":"2021-08-31T00:53:58Z","updated_at":"2022-10-27T05:22:12Z","promoted_at":"2021-09-02T17:24:01Z","width":3600,"height":2400,"color":"#c0c0c0","blur_hash":"LDJal+?I9GxBJCgN?^b^w19Fnhog","description":null,"alt_description":"sliced
+        fruits on white ceramic bowl","urls":{"raw":"https://images.unsplash.com/photo-1630371223444-708db033c7c6?ixid=MnwzNzE2OTd8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjY5MjA2ODY\u0026ixlib=rb-4.0.3","full":"https://images.unsplash.com/photo-1630371223444-708db033c7c6?crop=entropy\u0026cs=tinysrgb\u0026fm=jpg\u0026ixid=MnwzNzE2OTd8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjY5MjA2ODY\u0026ixlib=rb-4.0.3\u0026q=80","regular":"https://images.unsplash.com/photo-1630371223444-708db033c7c6?crop=entropy\u0026cs=tinysrgb\u0026fit=max\u0026fm=jpg\u0026ixid=MnwzNzE2OTd8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjY5MjA2ODY\u0026ixlib=rb-4.0.3\u0026q=80\u0026w=1080","small":"https://images.unsplash.com/photo-1630371223444-708db033c7c6?crop=entropy\u0026cs=tinysrgb\u0026fit=max\u0026fm=jpg\u0026ixid=MnwzNzE2OTd8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjY5MjA2ODY\u0026ixlib=rb-4.0.3\u0026q=80\u0026w=400","thumb":"https://images.unsplash.com/photo-1630371223444-708db033c7c6?crop=entropy\u0026cs=tinysrgb\u0026fit=max\u0026fm=jpg\u0026ixid=MnwzNzE2OTd8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjY5MjA2ODY\u0026ixlib=rb-4.0.3\u0026q=80\u0026w=200","small_s3":"https://s3.us-west-2.amazonaws.com/images.unsplash.com/small/photo-1630371223444-708db033c7c6"},"links":{"self":"https://api.unsplash.com/photos/PiwXpD3-Hbs","html":"https://unsplash.com/photos/PiwXpD3-Hbs","download":"https://unsplash.com/photos/PiwXpD3-Hbs/download?ixid=MnwzNzE2OTd8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjY5MjA2ODY","download_location":"https://api.unsplash.com/photos/PiwXpD3-Hbs/download?ixid=MnwzNzE2OTd8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjY5MjA2ODY"},"likes":138,"liked_by_user":false,"current_user_collections":[],"sponsorship":null,"topic_submissions":{"nature":{"status":"rejected"},"food-drink":{"status":"approved","approved_on":"2021-08-31T15:58:51Z"}},"user":{"id":"an8MUg-lGrQ","updated_at":"2022-10-26T10:25:18Z","username":"mathildelangevin","name":"Mathilde
+        Langevin","first_name":"Mathilde","last_name":"Langevin","twitter_username":"mathildlangevin","portfolio_url":"https://mathilde.ca/","bio":"Photographer
+        \u0026 Contributor","location":"Montréal","links":{"self":"https://api.unsplash.com/users/mathildelangevin","html":"https://unsplash.com/@mathildelangevin","photos":"https://api.unsplash.com/users/mathildelangevin/photos","likes":"https://api.unsplash.com/users/mathildelangevin/likes","portfolio":"https://api.unsplash.com/users/mathildelangevin/portfolio","following":"https://api.unsplash.com/users/mathildelangevin/following","followers":"https://api.unsplash.com/users/mathildelangevin/followers"},"profile_image":{"small":"https://images.unsplash.com/profile-1601327292565-cc4c02215d36image?ixlib=rb-4.0.3\u0026crop=faces\u0026fit=crop\u0026w=32\u0026h=32","medium":"https://images.unsplash.com/profile-1601327292565-cc4c02215d36image?ixlib=rb-4.0.3\u0026crop=faces\u0026fit=crop\u0026w=64\u0026h=64","large":"https://images.unsplash.com/profile-1601327292565-cc4c02215d36image?ixlib=rb-4.0.3\u0026crop=faces\u0026fit=crop\u0026w=128\u0026h=128"},"instagram_username":"mathildlangevin","total_collections":5,"total_likes":251,"total_photos":277,"accepted_tos":true,"for_hire":true,"social":{"instagram_username":"mathildlangevin","portfolio_url":"https://mathilde.ca/","twitter_username":"mathildlangevin","paypal_email":null}},"exif":{"make":"SONY","model":"ILCE-7","name":"SONY,
+        ILCE-7","exposure_time":"1/500","aperture":"3.5","focal_length":"30.0","iso":250},"location":{"name":null,"city":null,"country":null,"position":{"latitude":null,"longitude":null}},"meta":{"index":true},"public_domain":false,"tags":[],"tags_preview":[],"views":965696,"downloads":9017,"topics":[{"id":"xjPR4hlkBGA","title":"Food
+        \u0026 Drink","slug":"food-drink","visibility":"featured"}]}'
+  recorded_at: Fri, 28 Oct 2022 01:31:26 GMT
+- request:
+    method: get
+    uri: https://api.unsplash.com/photos/random/?orientation=landscape&topics=xjPR4hlkBGA
+    body:
+      encoding: UTF-8
+      string: ''
+    headers:
+      Accept:
+      - application/json
+      Authorization:
+      - Client-ID BAD_TOKEN
+      Connection:
+      - close
+      Host:
+      - api.unsplash.com
+      User-Agent:
+      - http.rb/5.1.0
+  response:
+    status:
+      code: 401
+      message: Unauthorized
+    headers:
+      Connection:
+      - close
+      Server:
+      - Cowboy
+      Content-Type:
+      - application/json
+      Access-Control-Allow-Origin:
+      - "*"
+      Access-Control-Request-Method:
+      - "*"
+      Access-Control-Allow-Headers:
+      - "*"
+      Access-Control-Expose-Headers:
+      - Link,X-Total,X-Per-Page,X-RateLimit-Limit,X-RateLimit-Remaining
+      Content-Language:
+      - en
+      Cache-Control:
+      - no-cache
+      X-Request-Id:
+      - 2b82ef76-c157-4575-8415-8f713bf824d2
+      X-Runtime:
+      - '0.016154'
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubDomains
+      Via:
+      - 1.1 vegur, 1.1 varnish, 1.1 varnish
+      Accept-Ranges:
+      - bytes
+      Date:
+      - Fri, 28 Oct 2022 01:31:26 GMT
+      X-Served-By:
+      - cache-iad-kiad7000153-IAD, cache-tyo11964-TYO
+      X-Cache:
+      - MISS, MISS
+      X-Cache-Hits:
+      - 0, 0
+      X-Timer:
+      - S1666920686.454392,VS0,VE180
+      Vary:
+      - Accept-Encoding, Origin,Authorization,Accept-Language,Accept
+      Transfer-Encoding:
+      - chunked
+    body:
+      encoding: UTF-8
+      string: '{"errors":["OAuth error: The access token is invalid"]}'
+  recorded_at: Fri, 28 Oct 2022 01:31:26 GMT
 recorded_with: VCR 6.1.0
