--- a/spec/fixtures/unsplash_results.yml
+++ b/spec/fixtures/unsplash_results.yml
@@ -1,16 +1,18 @@
 ---
 view:
-  width: 6720
-  height: 4480
-  urls: https://images.unsplash.com/photo-1528696892704-5e1122852276?ixid=MnwzNzE2OTd8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjY5MjA2ODU&ixlib=rb-4.0.3
+  width: 5472
+  height: 3648
+  urls: https://images.unsplash.com/photo-1598099867906-0ec501e7ff65?ixid=MnwzNzE2OTd8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjY5MjEzNTE&ixlib=rb-4.0.3
   creator:
-    :name: Liana Mikah
-    :bio: designer, photographer & social media curator in portland, OR
-    :photo: https://images.unsplash.com/profile-1502565518071-0757cd74b5a5?ixlib=rb-4.0.3&crop=faces&fit=crop&w=128&h=128
+    :name: Louis Hansel
+    :bio: Professional Restaurant Photographer | If you think about using any photo
+      to promote fear, hate, and segregation. Please, Do NOT download it. I'm here
+      to help those who want the opposite!
+    :photo: https://images.unsplash.com/profile-1598285175817-fc795679a769image?ixlib=rb-1.2.1&crop=faces&fit=crop&w=128&h=128
   topics:
     food-drink:
       status: approved
-      approved_on: '2020-04-06T14:20:21Z'
+      approved_on: '2020-08-25T18:19:12Z'
 topics:
   1:
     topic_id: xjPR4hlkBGA
