--- a/spec/fixtures/unsplash_results.yml
+++ b/spec/fixtures/unsplash_results.yml
@@ -1,18 +1,18 @@
 ---
 view:
-  width: 5472
-  height: 3648
-  urls: https://images.unsplash.com/photo-1598099867906-0ec501e7ff65?ixid=MnwzNzE2OTd8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjY5MjEzNTE&ixlib=rb-4.0.3
+  width: 5487
+  height: 3747
+  urls: https://images.unsplash.com/photo-1530841492851-efc37c5f629c?ixid=MnwzNzE2OTd8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjY5MjIzMzk&ixlib=rb-4.0.3
   creator:
-    :name: Louis Hansel
-    :bio: Professional Restaurant Photographer | If you think about using any photo
-      to promote fear, hate, and segregation. Please, Do NOT download it. I'm here
-      to help those who want the opposite!
-    :photo: https://images.unsplash.com/profile-1598285175817-fc795679a769image?ixlib=rb-1.2.1&crop=faces&fit=crop&w=128&h=128
+    :name: Jonathan Gallegos
+    :bio: "@jjonthan on Instagram\r\n**Over a decade as a lifestyle, adventure, and
+      studio photographer. Traveling with my wife @travelfoodlove on instagram.  PLEASE
+      LINK ALL PHOTOS TO jonathangallegos.com -- not required but much appreciated!"
+    :photo: https://images.unsplash.com/profile-1530548389707-20163e5f1a6d?ixlib=rb-1.2.1&crop=faces&fit=crop&w=128&h=128
   topics:
     food-drink:
       status: approved
-      approved_on: '2020-08-25T18:19:12Z'
+      approved_on: '2020-04-06T14:20:20Z'
 topics:
   1:
     topic_id: xjPR4hlkBGA
