--- a/spec/fixtures/unsplash_results.yml
+++ b/spec/fixtures/unsplash_results.yml
@@ -1,17 +1,16 @@
 ---
 view:
-  width: 5472
-  height: 3648
-  urls: https://images.unsplash.com/photo-1641149644265-1d303833b51c?ixid=MnwzNzE2OTd8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjcwMTA0MDM&ixlib=rb-4.0.3
+  width: 6000
+  height: 4000
+  urls: https://images.unsplash.com/photo-1643628636292-fcf02b8042e0?ixid=MnwzNzE2OTd8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjcwMjg1OTk&ixlib=rb-4.0.3
   creator:
-    :name: Erik Mclean
-    :bio: "Donations are welcome! paypal.me/Introspectivedsgn \r\n& Feel free to reach
-      out if you wish to purchase selling rights.  Give me a follow on instagram @introspectivedsgn"
-    :photo: https://images.unsplash.com/profile-1605586339247-f9d24f56b74eimage?ixlib=rb-4.0.3&crop=faces&fit=crop&w=128&h=128
+    :name: Cristina Pop
+    :bio:
+    :photo: https://images.unsplash.com/profile-1660143915443-8cd003c15b89image?ixlib=rb-1.2.1&crop=faces&fit=crop&w=128&h=128
   topics:
     food-drink:
       status: approved
-      approved_on: '2022-01-02T22:33:46Z'
+      approved_on: '2022-02-01T14:28:36Z'
 topics:
   1:
     topic_id: xjPR4hlkBGA
