--- a/spec/fixtures/cassettes/unsplash_api.yml
+++ b/spec/fixtures/cassettes/unsplash_api.yml
@@ -1140,4 +1140,72 @@ http_interactions:
       string: '{"id":"qnHJa6wDT6M","created_at":"2022-10-02T12:25:18Z","updated_at":"2022-10-28T18:35:50Z","promoted_at":"2022-10-02T13:00:42Z","width":6016,"height":4016,"color":"#594026","blur_hash":"L4B.le?EEf^h0$oLsmV[IpWq9waf","description":null,"alt_description":null,"urls":{"raw":"https://images.unsplash.com/photo-1664712470238-de37cf450048?ixid=MnwzNzE2OTd8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjcwMTAyMTY\u0026ixlib=rb-4.0.3","full":"https://images.unsplash.com/photo-1664712470238-de37cf450048?crop=entropy\u0026cs=tinysrgb\u0026fm=jpg\u0026ixid=MnwzNzE2OTd8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjcwMTAyMTY\u0026ixlib=rb-4.0.3\u0026q=80","regular":"https://images.unsplash.com/photo-1664712470238-de37cf450048?crop=entropy\u0026cs=tinysrgb\u0026fit=max\u0026fm=jpg\u0026ixid=MnwzNzE2OTd8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjcwMTAyMTY\u0026ixlib=rb-4.0.3\u0026q=80\u0026w=1080","small":"https://images.unsplash.com/photo-1664712470238-de37cf450048?crop=entropy\u0026cs=tinysrgb\u0026fit=max\u0026fm=jpg\u0026ixid=MnwzNzE2OTd8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjcwMTAyMTY\u0026ixlib=rb-4.0.3\u0026q=80\u0026w=400","thumb":"https://images.unsplash.com/photo-1664712470238-de37cf450048?crop=entropy\u0026cs=tinysrgb\u0026fit=max\u0026fm=jpg\u0026ixid=MnwzNzE2OTd8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjcwMTAyMTY\u0026ixlib=rb-4.0.3\u0026q=80\u0026w=200","small_s3":"https://s3.us-west-2.amazonaws.com/images.unsplash.com/small/photo-1664712470238-de37cf450048"},"links":{"self":"https://api.unsplash.com/photos/qnHJa6wDT6M","html":"https://unsplash.com/photos/qnHJa6wDT6M","download":"https://unsplash.com/photos/qnHJa6wDT6M/download?ixid=MnwzNzE2OTd8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjcwMTAyMTY","download_location":"https://api.unsplash.com/photos/qnHJa6wDT6M/download?ixid=MnwzNzE2OTd8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjcwMTAyMTY"},"likes":58,"liked_by_user":false,"current_user_collections":[],"sponsorship":null,"topic_submissions":{},"user":{"id":"ABjOUQkLxSY","updated_at":"2022-10-28T14:39:43Z","username":"epicbat","name":"Vasilina
         Sirotina","first_name":"Vasilina","last_name":"Sirotina","twitter_username":null,"portfolio_url":"https://vk.com/epicbat_photo","bio":null,"location":null,"links":{"self":"https://api.unsplash.com/users/epicbat","html":"https://unsplash.com/@epicbat","photos":"https://api.unsplash.com/users/epicbat/photos","likes":"https://api.unsplash.com/users/epicbat/likes","portfolio":"https://api.unsplash.com/users/epicbat/portfolio","following":"https://api.unsplash.com/users/epicbat/following","followers":"https://api.unsplash.com/users/epicbat/followers"},"profile_image":{"small":"https://images.unsplash.com/profile-1649430360814-bfc9c3fa6844image?ixlib=rb-4.0.3\u0026crop=faces\u0026fit=crop\u0026w=32\u0026h=32","medium":"https://images.unsplash.com/profile-1649430360814-bfc9c3fa6844image?ixlib=rb-4.0.3\u0026crop=faces\u0026fit=crop\u0026w=64\u0026h=64","large":"https://images.unsplash.com/profile-1649430360814-bfc9c3fa6844image?ixlib=rb-4.0.3\u0026crop=faces\u0026fit=crop\u0026w=128\u0026h=128"},"instagram_username":"epic.bat","total_collections":4,"total_likes":51,"total_photos":192,"accepted_tos":true,"for_hire":false,"social":{"instagram_username":"epic.bat","portfolio_url":"https://vk.com/epicbat_photo","twitter_username":null,"paypal_email":null}},"exif":{"make":null,"model":null,"name":null,"exposure_time":null,"aperture":null,"focal_length":null,"iso":null},"location":{"name":null,"city":null,"country":null,"position":{"latitude":null,"longitude":null}},"meta":{"index":true},"public_domain":false,"tags":[],"tags_preview":[],"views":521987,"downloads":3090,"topics":[]}'
   recorded_at: Sat, 29 Oct 2022 02:23:36 GMT
+- request:
+    method: get
+    uri: https://api.unsplash.com/topics/?per_page=30
+    body:
+      encoding: UTF-8
+      string: ''
+    headers:
+      Accept:
+      - application/json
+      Authorization:
+      - Client-ID BAD_TOKEN
+      Connection:
+      - close
+      Host:
+      - api.unsplash.com
+      User-Agent:
+      - http.rb/5.1.0
+  response:
+    status:
+      code: 401
+      message: Unauthorized
+    headers:
+      Connection:
+      - close
+      Server:
+      - Cowboy
+      Content-Type:
+      - application/json
+      Access-Control-Allow-Origin:
+      - "*"
+      Access-Control-Request-Method:
+      - "*"
+      Access-Control-Allow-Headers:
+      - "*"
+      Access-Control-Expose-Headers:
+      - Link,X-Total,X-Per-Page,X-RateLimit-Limit,X-RateLimit-Remaining
+      Content-Language:
+      - en
+      Cache-Control:
+      - no-cache
+      X-Request-Id:
+      - fb25ba83-f246-495f-aff3-066450f4192d
+      X-Runtime:
+      - '0.009640'
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubDomains
+      Via:
+      - 1.1 vegur, 1.1 varnish, 1.1 varnish
+      Accept-Ranges:
+      - bytes
+      Date:
+      - Sat, 29 Oct 2022 07:48:33 GMT
+      X-Served-By:
+      - cache-iad-kiad7000131-IAD, cache-tyo11958-TYO
+      X-Cache:
+      - MISS, MISS
+      X-Cache-Hits:
+      - 0, 0
+      X-Timer:
+      - S1667029713.216299,VS0,VE180
+      Vary:
+      - Accept-Encoding, Origin,Authorization,Accept-Language,Accept
+      Transfer-Encoding:
+      - chunked
+    body:
+      encoding: UTF-8
+      string: '{"errors":["OAuth error: The access token is invalid"]}'
+  recorded_at: Sat, 29 Oct 2022 07:48:33 GMT
 recorded_with: VCR 6.1.0
